--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,7 +1,7 @@
 .profile__avatar {  
     width: 100%;
-    max-width: 120px;
-    max-height: 120px;
+    width: 120px;
+    height: 120px;
     margin: 0 28px 0 0;
     border-radius: 100%;
     object-fit: cover;
